# smart-city-analytics

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: retrain_pipeline.py
docker/: Dockerfile.api
docs/: architecture.md
frontend/: package.json  tsconfig.json
frontend/src/: App.tsx
grafana-dashboards/: smart-city-overview.json
helm/smart-city/: Chart.yaml  values.yaml
helm/smart-city/templates/: deployment.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
monitoring/: alerts.yml  jaeger.yml  prometheus.yml
src/smart_city_analytics/: __init__.py  analytics.py  api_gateway.py  ingestion.py  models.py  observability.py  processing.py  serving.py  storage.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_ingestion_processing.py  test_models_analytics.py
